desenv_tests/test-assets/field/failure/separator_wrong_usage_1.rs
use desenv::Desenv;

#[derive(Desenv)]
struct Config {
    #[desenv(separator)]
    field: String
}

fn main(){}